Update all dependencies in last version. This fixes the datepickers + translation issues.
Remove
- ui-bootstrap version that was manually built from the repository.
- angular moment dependency (just use builtin date filter)

--- a/client/dev/partials/_forms/optional-date.html
+++ b/client/dev/partials/_forms/optional-date.html
@@ -5,7 +5,7 @@
 	</div>
 
 	<input type="text" 
-		   datepicker-popup="longDate"
+		   uib-datepicker-popup="longDate"
 		   name="start"
 		   ng-model="chosenDate"
 		   is-open="chosenDateOpen"
