--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -64,7 +64,7 @@
 			<tr>
 				<th>
 					<input type="text"
-						   datepicker-popup="longDate"
+						   uib-datepicker-popup="longDate"
 						   ng-model="newInputDate.date"
 						   is-open="dateOpen"
 						   ng-click="dateOpen=true"
