--- a/client/dev/partials/projects/activity/olap.html
+++ b/client/dev/partials/projects/activity/olap.html
@@ -72,7 +72,7 @@
 							<div class="input-group">
 								<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 								<input type="text" 
-									   datepicker-popup="longDate"
+									   uib-datepicker-popup="longDate"
 									   name="start"
 									   ng-model="query.filters._start"
 									   is-open="startDateOpen"
@@ -91,7 +91,7 @@
 							<div class="input-group">
 								<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 								<input type="text" 
-									   datepicker-popup="longDate"
+									   uib-datepicker-popup="longDate"
 									   name="end"
 									   ng-model="query.filters._end"
 									   is-open="endDateOpen"
