--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -15,7 +15,7 @@
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 						<input type="text" 
-							   datepicker-popup="longDate"
+							   uib-datepicker-popup="longDate"
 							   name="start"
 							   ng-model="filters._start"
 							   is-open="startDateOpen"
@@ -34,7 +34,7 @@
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 						<input type="text" 
-							   datepicker-popup="longDate"
+							   uib-datepicker-popup="longDate"
 							   name="end"
 							   ng-model="filters._end"
 							   is-open="endDateOpen"
