--- a/client/dev/partials/menu.html
+++ b/client/dev/partials/menu.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-inverse navbar-fixed-top noprint" role="navigation">
 	<div class="container-fluid">
+		
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only" translate="menu.toggle_nav"></span>
@@ -62,8 +63,8 @@
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li dropdown>
-					<a href="#" dropdown-toggle>
+				<li uib-dropdown>
+					<a href="#" uib-dropdown-toggle>
 						<i class="fa fa-fw fa-language"></i>
 						{{'menu.language' | translate}}
 						<span class="caret"></span>
@@ -76,8 +77,8 @@
 					</ul>
 				</li>
 				
-				<li dropdown>
-					<a href="#" dropdown-toggle>
+				<li uib-dropdown>
+					<a href="#" uib-dropdown-toggle>
 						<i class="fa fa-fw fa-user"></i>
 						{{userCtx.name}}
 						<span class="caret"></span>
