--- a/client/dev/partials/projects/activity/collection-form-edition.html
+++ b/client/dev/partials/projects/activity/collection-form-edition.html
@@ -68,14 +68,14 @@
 
 	<div class="form-group" ng-if="project.forms[currentFormIndex].periodicity !== 'free'">
 		<label for="periodicity" class="col-sm-2 control-label" translate="shared.start"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="(project.forms[currentFormIndex].start || project.start)|amDateFormat:'YYYY-MM-DD'">
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="(project.forms[currentFormIndex].start || project.start)|date">
 			<optional-date ng-model="project.forms[currentFormIndex].start" default="project.start"></optional-date>
 		</div>
 	</div>
 
 	<div class="form-group" ng-if="project.forms[currentFormIndex].periodicity !== 'free'">
 		<label for="periodicity" class="col-sm-2 control-label" translate="shared.end"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="(project.forms[currentFormIndex].end || project.end)|amDateFormat:'YYYY-MM-DD'">
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="(project.forms[currentFormIndex].end || project.end)|date">
 			<optional-date ng-model="project.forms[currentFormIndex].end" default="project.end"></optional-date>
 		</div>
 	</div>
