--- a/client/dev/partials/projects/activity/collection-input-edition.html
+++ b/client/dev/partials/projects/activity/collection-input-edition.html
@@ -4,7 +4,7 @@
 	<li><a ui-sref="main.project.collection_input_list" translate="project.collection_input_list"></a></li>
 	<li class="active" ng-bind="form.name"></li>
 	<li class="active" ng-bind="inputEntity.name" ng-if="inputEntity"></li>
-	<li class="active" ng-bind="currentInput.period|amDateFormat:'YYYY-MM-DD'"></li>
+	<li class="active" ng-bind="currentInput.period|date"></li>
 </ol>
 
 <doc-reminder pages="project.input" class="noprint"></doc-reminder>
