--- a/client/dev/partials/projects/activity/reporting-detailed.html
+++ b/client/dev/partials/projects/activity/reporting-detailed.html
@@ -69,7 +69,7 @@
 							<div class="input-group">
 								<span class="input-group-addon"><i class="fa fa-calendar fa-fw"></i></span>
 								<input type="text" 
-									   datepicker-popup="longDate"
+									   uib-datepicker-popup="longDate"
 									   name="start"
 									   ng-model="query.filters._start"
 									   is-open="startDateOpen"
@@ -88,7 +88,7 @@
 							<div class="input-group">
 								<span class="input-group-addon"><i class="fa fa-calendar fa-fw"></i></span>
 								<input type="text" 
-									   datepicker-popup="longDate"
+									   uib-datepicker-popup="longDate"
 									   name="end"
 									   ng-model="query.filters._end"
 									   is-open="endDateOpen"
