--- a/client/dev/partials/projects/indicators/reporting-detailed.html
+++ b/client/dev/partials/projects/indicators/reporting-detailed.html
@@ -35,7 +35,7 @@
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-calendar fa-fw"></i></span>
 						<input type="text" 
-							   datepicker-popup="longDate"
+							   uib-datepicker-popup="longDate"
 							   name="start"
 							   ng-model="filters._start"
 							   is-open="startDateOpen"
@@ -54,7 +54,7 @@
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-calendar fa-fw"></i></span>
 						<input type="text" 
-							   datepicker-popup="longDate"
+							   uib-datepicker-popup="longDate"
 							   name="end"
 							   ng-model="filters._end"
 							   is-open="endDateOpen"
