Fix: avoid timezone and DST related issues by switching everything to UTC. Need to work around a bug in datepicker to achieve that (hence the new directive "utc-datepicker")

--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -63,13 +63,7 @@
 		<tfoot ng-if="displayInfo[selectedForm.id]._.displayFooterRow">
 			<tr>
 				<th>
-					<input type="text"
-						   uib-datepicker-popup="longDate"
-						   ng-model="newInputDate.date"
-						   is-open="dateOpen"
-						   ng-click="dateOpen=true"
-						   required
-						   class="form-control" />
+					<utc-datepicker ng-model="newInputDate.date" />
 				</th>
 				<td ng-if="displayInfo[selectedForm.id].none.displayColumn">
 					<a class="btn btn-xs btn-success"
