--- a/client/dev/partials/menu.html
+++ b/client/dev/partials/menu.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 		
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			<button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
 				<span class="sr-only" translate="menu.toggle_nav"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -12,7 +12,7 @@
 			<img alt="Brand" src="/img/logo.svg" style="height: 30px; margin: 0">
 		</div>
 
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		<div class="collapse navbar-collapse" uib-collapse="!isNavCollapsed">
 
 			<ul class="nav navbar-nav">
 				<li ng-class="{active: $state.includes('main.home')}">
